Grammar.txt
program:    statement (lf statement)*
statement:  variable "=" orexpr
            if orexpr then statement (else statement)?
            if orexpr lf program lf (else program)? endif
            while orexpr do statement
            while orexpr lf program lf endwhile
            cls
            print (orexpr ("," orexpr)*)?
            println (orexpr ("," orexpr)*)?
            cprint (orexpr ("," orexpr)*)?
            dump
            cdump

orexpr:     andexpr ("OR" andexpr)*
andexpr:    eqexpr ("AND" eqexpr)*
eqexpr:     glexpr (("=="|"!=") eqexpr)*
glexpr:     expr (("<"|"<="|">"|">=") expr)*

expr:       term (("+"|"-") term)*
term:       factor (("*"|"/") factor)*
factor:     ("+"|"-") int|float
            string
            "(" orexpr ")"
            variable
            "[" (orexpr ("," orexpr)*)? "]" ("[]" expr "]")?

string:     """ ([^"]|\\")* """
int:        [0-9]
float:      [0-9] ("." [0-9]*)
variable:   [a-zA-Z_\$][\$_0-9\p{L}]*
lf:         (":"|"\n")
